--- a/src/style/index.css
+++ b/src/style/index.css
@@ -24,26 +24,26 @@ main {
     background: url('/assets/shifaaz-shamoon-302656.jpg') center/cover;
 }
 
-#home {
+#login {
     justify-content: center;
 }
 
-#layer-card {
+#credential-card {
     margin: 100px 20px;
 }
 
-#layer-card .mdl-card__title-text {
+#credential-card .mdl-card__title-text {
     color: #fff;
     font-size: 300%;
     letter-spacing: -2px;
     text-shadow: 0 0 1px #000, 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
-#layer-card .mdl-card__title {
+#credential-card .mdl-card__title {
     height: 215px;
     background: #1A237E;
 }
 
-#layer-card .mdl-card__actions {
+#credential-card .mdl-card__actions {
     text-align: right;
 }
