--- a/src/style/index.css
+++ b/src/style/index.css
@@ -47,3 +47,29 @@ main {
 #credential-card .mdl-card__actions {
     text-align: right;
 }
+
+#main {
+    margin-top: 56px;
+}
+
+.layer-card {
+    min-height: 0;
+}
+
+.layer-card .mdl-card__title-text {
+    font-size: 200%;
+    letter-spacing: -2px;
+}
+
+.layer-card .mdl-card__actions {
+    text-align: right;
+}
+
+.layer-card .mdl-card__menu {
+    top: 16px;
+    right: 8px;
+}
+
+.layer-card + .layer-card {
+    margin: 16px 0;
+}
