--- a/src/style/index.css
+++ b/src/style/index.css
@@ -98,7 +98,7 @@ main {
 }
 
 .card .drawer i {
-    text-shadow: #666 0 2px 4px;
+    text-shadow: #000 0 2px 4px;
     /* text-shadow:
         -1px -1px 0 #000,
         1px -1px 0 #000,
@@ -107,7 +107,7 @@ main {
 }
 
 .card .drawer i.active {
-    text-shadow: #000 0 2px 4px;
+    text-shadow: none;
 }
 
 .layers-list {
