--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,6 +19,10 @@ main {
     width: 100%;
 }
 
+#map {
+    height: 100%;
+}
+
 #app {
     height: 100%;
     background: url('/assets/shifaaz-shamoon-302656.jpg') center/cover;
