--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,10 +19,6 @@ main {
     width: 100%;
 }
 
-#map {
-    height: 100%;
-}
-
 #app {
     height: 100%;
     background: url('/assets/shifaaz-shamoon-302656.jpg') center/cover;
@@ -53,7 +49,16 @@ main {
 }
 
 #main {
-    margin-top: 56px;
+    height: calc(100vh - 64px);
+    overflow: hidden;
+}
+
+#main > .mdl-cell.left {
+    overflow: scroll;
+}
+
+#map {
+    height: 100%;
 }
 
 .card {
@@ -117,8 +122,6 @@ main {
 .layers-list {
     margin: 8px 0;
     display: inline-block;
-    height: calc(100vh - 56px - 121px - 24px - 56px);
-    overflow-y: scroll;
 }
 
 .layers-list > .card + .card {
