Remove icons in card titles
They just made it hard to read, and had some overlap issues
when wrapping.

--- a/app/src/style/index.scss
+++ b/app/src/style/index.scss
@@ -110,6 +110,7 @@ main {
     .mdl-card__title-text {
         font-size: 200%;
         letter-spacing: -2px;
+        padding-right: 0.25rem;
     }
 
     .mdl-card__actions {
